*-*- Release 0.4.0
	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
	* Fixed bug #509711: 'Decimal datatype has zero precision'.
	* Fixed bug #509707: 'Decimal database type mapped to D double'.
	* Fixed bug #514143: 'Annoying obsolete FIXME in the routes'.

2010-01-19  Release 0.3.0
	* Actions can be rendered in html, json, or xml.
	* Routes are more RESTful and use regular expressions.
	* Models can be converted to json and xml via their to_json & to_xml methods.
	* Views can use the link_to function to render links.
	* The './gen create scaffolding' now gives model fields default values, instead of null.
	* The './gen create scaffolding' now gives each field a proper html control, instead of a textbox.
	* The './gen create scaffolding' now only allows valid field types.
	* The server now rebuilds only when files under the app dir change, instead of any file changing.
	* Templates now use <%= for print with escape, and <%# for just print.
	* The web server now returns 'building ...' while compiling.
	* The'./gen recreate database' command recreates a database.
	* Fixed bug #503179: 'DB data is not formatted correctly when rendered'.
	* Fixed bug #502003: 'Not providing an argument for show crashes the server'.
	* Fixed bug #503190: 'Having the same plural and singular word for a noun fails'.
	* Fixed bug #503981: 'CRUD UI with no data is confusing'.

2009-12-31  Release 0.2.0
	* Moved from GPLv2 to GPLv3
	* Added a blacklist of words to be disallowed by the gen script.
	* Moved to a Python Tornado and D based server for speed and concurrency.
	* Updated the server so it automatically rebuilds when files change.
	* Replaced the ./build and ./run scripts with just ./run.
	* Model.find_by_id returns null on nothing found, while Model.find throws.
	* Added proper copyright/license headers to each file.
	* Changed the framework to use string as an alias for char[].
	* Changed most imports to be private.
	* Fixed broken sessions.