@@ -3,8 +3,8 @@ routes = 	{'files' :
 					{'index'  : {'^/files$'        : 'GET'}, 
 					 'create' : {'^/files$'        : 'POST'}, 
 					 'new'    : {'^/files/new$'    : 'GET'}, 
-					 'show'   : {'^/files/\d*$'      : 'GET'}, 
-					 'update' : {'^/files/\d*$'      : 'PUT'}, 
-					 'edit'   : {'^/files/\d*;edit$' : 'GET'}, 
-					 'destroy' : {'^/files/\d*$'      : 'DELETE'}}
+					 'show'   : {'^/files/\d+$'      : 'GET'}, 
+					 'update' : {'^/files/\d+$'      : 'PUT'}, 
+					 'edit'   : {'^/files/\d+;edit$' : 'GET'}, 
+					 'destroy' : {'^/files/\d+$'      : 'DELETE'}}
 			}
